# FlashAttention

./: .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml  transformer.py
.github/workflows/: cuda-tests.yml
bench/: README.md  bench_linear_backward_pytorch.py  compare_linear_backward_bench.py  linear_backward_bench.cu  linear_forward_backward_bench.cu  linear_forward_bench.cu  plot_linear_backward_compare.py  plot_linear_forward_backward_compare.py  run.sh  run_linear_backward_compare.sh  run_linear_compare.sh  run_linear_forward_backward_compare.sh  tensor_bandwidth_bench.cu
bindings/python/: module.cpp  py_bindings.h  py_dtype_device.cpp  py_errors.h  py_ops_classification.cpp  py_ops_layernorm.cpp  py_ops_linear.cpp  py_ops_optimizer.cpp  py_ops_relu.cpp  py_ops_softmax.cpp  py_stream.cpp  py_tensor.cpp
docs/: ktorch_implementation_notes.md  ktorch_torch_borrowing.md
include/: allocator.h  cu_check.h  cu_stream.h  cublass_handle.h  ops.h  tensor.h
python/ktorch/: __init__.py  ops.py  tensor.py
python/ktorch/data/: __init__.py  adapters.py  loader.py
src/: cu_stream.cu  ops_activation.cu  ops_classification.cu  ops_layernorm.cu  ops_linear.cu  ops_optimizer.cu  ops_softmax.cu  tensor.cu
src/ops/: flash_attn_api.cu  flash_attn_api.h
src/tensor/include/: allocator.h  cu_check.h  cu_stream.h  tensor.h
src/tensor/src/: cu_stream.cu
tests/: README.md  run.sh  run_python_tests.sh  smoke_main.cpp  test_classification.cu  test_layernorm.cu  test_linear.cu  test_multistream.cu  test_optimizer.cu  test_relu.cu  test_softmax.cu  test_stream_runtime.cu  test_tensor.cu
tests/include/: general.h  test_layernorm.h  test_linear.h  test_relu.h  test_softmax.h
tests/python/: common.py  test_borrow_stress_api.py  test_classification_api.py  test_data_loader_api.py  test_fashion_mnist_manual_train_api.py  test_layernorm_api.py  test_linear_api.py  test_optimizer_api.py  test_relu_api.py  test_softmax_api.py  test_stream_api.py  test_tensor_api.py
tools/: bench_linear_forward_backward_pytorch.py  bench_linear_pytorch.py  compare_linear_bench.py  compare_linear_forward_backward_bench.py  harness.py  plot_linear_compare.py
tools/ktorch/: fashion_mnist_manual_train.py  fashion_mnist_pytorch_train.py  mlp_manual_train.py  run_fashion_mnist_compare.sh
